[package]
name = "claw401-core"
version = "0.1.0"
edition = "2021"
description = "Core verification engine for the Claw401 X401 wallet authentication protocol"
license = "Apache-2.0"
repository = "https://github.com/claw401"
keywords = ["solana", "authentication", "wallet", "ed25519", "web3"]
categories = ["cryptography", "authentication", "web-programming"]
readme = "README.md"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
bs58 = "0.5"
thiserror = "1.0"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
rand = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]
